# tarmac

./: .gitignore  README.html  README.md  README.txt  project_phase5_tv_verification.md  settings.gradle.kts  uxplay.1  uxplay.cpp
.github/workflows/: build.yml
Bluetooth_LE_beacon/dbus/: uxplay-beacon.py
Bluetooth_LE_beacon/winrt/: uxplay-beacon.py
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_audio_renderer.cpp  android_video_renderer.cpp  dnssd_stub.c  jni_bridge.cpp
app/src/main/java/com/tarmac/: MainActivity.kt  MirrorActivity.kt  TarmacApplication.kt  VideoPlayerActivity.kt
app/src/main/java/com/tarmac/media/: AudioPipeline.kt  DisplayCapabilities.kt  HevcBitstream.kt  VideoPipeline.kt
app/src/main/java/com/tarmac/service/: AirPlayJni.kt  BonjourAdvertiser.kt  Prefs.kt  SessionStateBus.kt  TarmacService.kt
app/src/main/java/com/tarmac/ui/: MainFragment.kt  SettingsActivity.kt  SettingsRootFragment.kt  StatusItemPresenter.kt
app/src/main/res/drawable/: banner.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_mirror.xml  activity_video_player.xml  item_status.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/com/tarmac/media/: HevcBitstreamTest.kt
app/src/test/java/com/tarmac/service/: FeatureBitsTest.kt  SessionStateBusTest.kt
gradle/: libs.versions.toml
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
lib/: CMakeLists.txt  airplay_video.c  http_handlers.h  httpd.c  raop.h  raop_ntp.c  raop_rtp.c  raop_rtp_mirror.c
native/libairplay/: CMakeLists.txt  README.md  uxplay.spec
native/libairplay/Bluetooth_LE_beacon/dbus/: uxplay-beacon.1
native/libairplay/Bluetooth_LE_beacon/winrt/: uxplay-beacon.1
native/libairplay/lib/: netutils.c  raop_handlers.h
native/libplist/: CMakeLists.txt  VENDOR-COMMIT  config.h
renderers/: video_renderer.c
